# dist/openapi.yaml
@@ -146,6 +146,32 @@ paths:
           description: User not found.
       security:
         - cookieAuth: []
+
+
+  /users/myAllRecipes/{recipeId}:
+    get:
+      tags:
+      - Recipes
+      summary: Return preview details on recipe that were created by the user, by his ID
+      description: Return preview details on recipe that were created by the user, by his ID.
+      parameters:
+      - name: recipeId
+        in: path
+        description: Recipe's id.
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: integer
+      responses:
+        "200":
+          description: Data about the user recipe.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RecipePreview'
+        "404":
+          description: Recipe ID is not exists.
   
 
   /users/lastWatchedRecipes:
